# FFmpeg-patch

./: LICENSE  README.md  third-party-programs
docker/: Dockerfile.package  Dockerfile.source  build_docker_image.sh  run_docker_container.sh
docker/patch/: cvdef.h  opencv.pc
media-analytics/: 0001-Intel-inference-engine-detection-filter.patch  0002-New-filter-to-do-inference-classify.patch  0003-iemetadata-convertor-muxer.patch  0004-Kafka-protocol-producer.patch  0005-Support-object-detection-and-featured-face-identific.patch  0006-Send-metadata-in-a-packet-and-refine-the-json-format.patch  0007-Refine-features-of-IE-filters-NEW.patch  0007-Refine-features-of-IE-filters.patch  0008-fixed-extra-comma-in-iemetadata-NEW.patch  0008-fixed-extra-comma-in-iemetadata.patch  0009-add-source-as-option-source-url-calculate-nano-times.patch  0010-Set-a-larger-string-buffer.patch  0010-fixed-buffer-overflow-issue-in-iemetadata.patch  0011-libavutil-add-RGBP-pixel-format.patch  0012-Add-more-devices-into-target.patch  0013-Enable-vaapi-scale-for-IE-inference-filter.patch  0014-iemetadata-it-will-provide-data-frame-by-frame-by-de.patch  0015-Add-libcjson-for-model-pre-post-processing.patch  0016-Change-IE-filters-to-use-model-proc.patch  0017-profiling-profiling-the-whole-pipeline-performance.patch  0017-refine-total-fps-without-init-filter-and-add-decode-.patch  0018-Bugs-fixing.patch  0018-profiling-enable-it-just-by-cmd-option-set-to-av-par.patch  0019-Face-reidentification-refine.patch  0019-PATCH-profiling-refine-total-fps-without-init-filter.patch  0020-More-changes-within-one-patch.patch  BAKUP-0010-New-param-to-set-cpu-threads.patch  README.md
patches/: 0001-Rebased-ffmpeg-video-analytics-patches-for-v0.2.patch  0001-ffmpeg-video-analytics-v0.4-release.patch  0002-Rebased-ffmpeg-video-analytics-patches-for-v0.3.patch  0002-Use-a-common-way-for-param-tags.patch  0003-Add-empty-filter-graph-check-for-profiling.patch  0003-C-API-related-changes-for-OpenVINO-2020.1.patch  0004-FFVA-v0.5-release-patches.patch
samples/cpp/deep-player/: .gitignore  CMakeLists.txt  README.md  install_dependencies.sh
samples/cpp/deep-player/sample/: CMakeLists.txt  flags.h  main.cc
samples/cpp/deep-player/src/: CMakeLists.txt  bounded_buffer.h  common.h  decoder.cc  decoder.h  demuxer.cc  demuxer.h  filter.cc  filter.h  input_source.cc  input_source.h  opencv_utils.cc  opencv_utils.h  render.cc  render.h
samples/model_proc/: face-detection-adas-0001.json  face-person-detection-retail-0002.json  face-reidentification-retail-0095.json  frozen_darknet_yolov3.json  license-plate-recognition-barrier-0001.json  pedestrian-and-vehicle-detector-adas-0001.json  pedestrian-detection-adas-0002.json  person-attributes-recognition-crossroad-0230.json  person-detection-retail-0002.json  person-detection-retail-0013.json  person-reidentification-retail-0079.json  vehicle-attributes-recognition-barrier-0039.json  vehicle-detection-adas-0002.json  vehicle-license-plate-detection-barrier-0106.json
samples/scripts/: build_ffmpeg.sh  build_rdkafka.sh
samples/shell/: face_detection_and_classification.sh  face_detection_and_reidentification.sh  (+4 more)
scripts/: .clang-format  build_ffmpeg-dynamic.sh  build_ffmpeg-static.sh  build_install_libva.sh  build_install_libva_media_driver.sh  install_cmake.sh  install_ie_c_api.sh  install_metapublish_dependencies.sh  install_opencv.sh  path_extractor.sh  setup_env.sh
vaapi/: README.md
(+15 files in other folders)
